<resources>
    <string name="app_name">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="map">Map</string>
    <string name="robinsons_place_mall">Robinsons Place Mall</string>
    <string name="location_pedro_gil_corner_adriatico_street_manila_luzon_philippines">Location: Pedro Gil Corner Adriatico Street, Manila, Luzon Philippines</string>
    <string name="distance_from_ust_4_7_km">Distance from UST: 4.7 km</string>
    <string name="todo">TODO</string>
    <string name="intramuros">Intramuros</string>
    <string name="location_bonifacio_dr_and_padre_burgos_st_manila_luzon_1002_philippines">Location: Bonifacio Dr and Padre Burgos St, Manila, Luzon 1002 Philippines</string>
    <string name="distance_from_ust_4_3km">Distance from UST: 4.3km</string>
</resources>
